# dashing-boards

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
examples/: all_components_demo.py  binding_demo.py  diagram_demo.py  file_source_demo.py  graph_demo.py  kanban_demo.py  sql_source_demo.py  tree_table_demo.py  tree_table_edit_demo.py
src/dashing_boards/: __init__.py  app.py
src/dashing_boards/binding/: __init__.py  component.py  file_source.py  http_source.py  source.py  sql_source.py  types.py
src/dashing_boards/components/: __init__.py  _writable.py
src/dashing_boards/components/button/: __init__.py  component.py
src/dashing_boards/components/date_picker/: __init__.py  component.py
src/dashing_boards/components/diagram/: __init__.py  component.py
src/dashing_boards/components/dropdown/: __init__.py  component.py
src/dashing_boards/components/graph/: __init__.py  component.py
src/dashing_boards/components/kanban/: __init__.py  component.py
src/dashing_boards/components/layout/: __init__.py  grid.py  loading.py  modal.py  page.py  tab.py  toast.py
src/dashing_boards/components/table/: __init__.py  component.py
src/dashing_boards/components/tag_list/: __init__.py  component.py
src/dashing_boards/components/text_box/: __init__.py  component.py
src/dashing_boards/tree_table/: __init__.py  component.py  model.py
tests/binding/: test_sources.py  test_sql_source.py
tests/components/: test_diagram.py  test_graph_tree.py  test_kanban.py  test_layout.py  test_table.py
tests/tree_table/: test_component.py  test_model.py
(+7 files in other folders)
